# GameCoTuong

./: .gitignore  ARCHITECTURE.md  Cargo.toml  CoTuong-10faa5091276b1c1.js  CoTuong-10faa5091276b1c1_bg.wasm  CoTuong-15b9bc60a5e721fa.js  CoTuong-15b9bc60a5e721fa_bg.wasm  CoTuong-16115b9ea1a28b1d.js  CoTuong-16115b9ea1a28b1d_bg.wasm  CoTuong-1887dd3db9ab5141.js  CoTuong-1887dd3db9ab5141_bg.wasm  CoTuong-20bd215ccb090eda.js  CoTuong-20bd215ccb090eda_bg.wasm  CoTuong-24a88516816ba0fb.js  CoTuong-24a88516816ba0fb_bg.wasm  CoTuong-2adf4dd121a82a26.js  CoTuong-2adf4dd121a82a26_bg.wasm  CoTuong-2d103d7b2c78aca5.js  CoTuong-2d103d7b2c78aca5_bg.wasm  CoTuong-35f507e9dfb3aea8.js  CoTuong-35f507e9dfb3aea8_bg.wasm  CoTuong-3b0007dc53e9cf46_bg.wasm  CoTuong-3d78c364abbc39b1.js  CoTuong-3d78c364abbc39b1_bg.wasm  CoTuong-3da71e80c4d13e58.js  CoTuong-3da71e80c4d13e58_bg.wasm  CoTuong-408acc1293f9bdb4_bg.wasm  CoTuong-437e19004b260c40.js  CoTuong-437e19004b260c40_bg.wasm  CoTuong-43df630527c969e6.js  CoTuong-43df630527c969e6_bg.wasm  CoTuong-488364ca26787e1d.js  CoTuong-488364ca26787e1d_bg.wasm  CoTuong-4ce52ffb5a266f0a.js  CoTuong-4ce52ffb5a266f0a_bg.wasm  CoTuong-615156728a8f804d.js  CoTuong-615156728a8f804d_bg.wasm  CoTuong-686a08fa5024f5cc.js  CoTuong-686a08fa5024f5cc_bg.wasm  CoTuong-6c5ae7b636968a8.js  (+174 more)
.agent/rules/: rust.md
.agent/skills/game_logic_rules/: SKILL.md
.agent/skills/multiplayer_server/: SKILL.md
.agent/skills/rust_development/: SKILL.md
.agent/skills/wasm_client_ui/: SKILL.md
.agent/skills/xiangqi_engine_tuning/: SKILL.md
.github/workflows/: deploy.yml
client/: Cargo.toml  index.html
client/src/: app.rs  main.rs  network.rs
client/src/app/: config.rs  controls.rs  export.rs  game_app.rs  log.rs  mod.rs  online.rs  styles.rs
client/src/components/: board.rs
cotuong_core/: Cargo.toml  check_output.txt  generator_reproduction_output.txt  generator_test_output.txt  mate_test_output.txt  mate_test_output_final.txt  mate_test_output_v2.txt  test_exp_output.txt  test_output.txt
cotuong_core/src/: lib.rs  worker.rs
cotuong_core/src/engine/: bench_test.rs  config.rs  eval.rs  mate_test.rs  mod.rs  move_list.rs  movegen.rs  search.rs  search_test_snippet.rs  tt.rs  zobrist.rs
cotuong_core/src/logic/: board.rs  eval_constants.rs  game.rs  generator.rs  lookup.rs  mod.rs  opening.rs  repetition_test.rs  rules.rs
cotuong_core/target_test/: .rustc_info.json
cotuong_core/tests/: mate_solving.rs  mate_tests.rs
public/: manifest.json  sw.js
server/: Cargo.toml
server/src/: game_manager.rs  main.rs  ws.rs
server/src/game_manager/: lifecycle.rs  matchmaking.rs  mod.rs  move_handler.rs  session.rs  tests.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: app.rs  main.rs  resources.rs
src/components/: board.rs
src/engine/: bench_test.rs  config.rs  eval.rs  eval_constants.rs  mod.rs  move_list.rs  search.rs  zobrist.rs
src/logic/: board.rs  eval_constants.rs  game.rs  mod.rs  opening.rs  repetition_test.rs  rules.rs
src/systems/: game.rs
src/ui/: board.rs  mod.rs  panels.rs
