[package]
name = "CoTuong"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[workspace]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1"
web-sys = { version = "0.3", features = ["Performance", "Window", "Blob", "Url", "Document", "Element", "HtmlElement", "HtmlAnchorElement", "HtmlInputElement", "FileList", "File", "FileReader", "Event", "EventTarget"] }
js-sys = "0.3"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
