[workspace]
resolver = "2"
members = [
    "cotuong_core",
    "client",
    "server",
    "shared",
]

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
