[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
cotuong_core = { path = "../cotuong_core" }
shared = { path = "../shared" }
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1"
web-sys = { version = "0.3", features = ["Performance", "Window", "Blob", "Url", "Document", "Element", "HtmlElement", "HtmlAnchorElement", "HtmlInputElement", "FileList", "File", "FileReader", "Event", "EventTarget", "HtmlCanvasElement", "CanvasRenderingContext2d", "DomRect", "HtmlAudioElement", "WebSocket", "MessageEvent"] }
js-sys = "0.3"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
gloo-worker = { version = "0.4", features = ["futures"] }

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "GameCoTuong"
path = "src/main.rs"

[lints]
workspace = true
