[package]
name = "cotuong_core"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
serde-big-array = "0.5"
gloo-worker = { version = "0.4", features = ["futures"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Performance", "Window", "WorkerGlobalScope"] }
js-sys = "0.3"
wasm-bindgen = "0.2"


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
